# arcanum-ce

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci-build.yml
cmake/: copy_ffmpeg_runtime_dlls.cmake.in  fixup_arcanum_bundle.cmake.in  prepare_ffmpeg.cmake
first_party/bink_compat/: CMakeLists.txt
first_party/bink_compat/include/: bink_compat.h
first_party/bink_compat/src/: bink_compat.c
first_party/tig/include/tig/: font.h  movie.h  video.h  window.h
first_party/tig/src/: bmp.c  core.c  font.c  message.c  movie.c  video.c  window.c
scripts/: build_ffmpeg_macos_sdk.sh
src/: main.c
src/game/: dialog.c  dialog_camera.c  dialog_camera.h  gamelib.c  gamelib.h  gmovie.c  gmovie.h  iso_zoom.c  iso_zoom.h  light.c  light.h  location.c  location.h  object.c  object.h  scroll.c  target.c  target.h  tb.c  tb.h  tc.c  tc.h  tf.c  tile.c  tile.h
src/ui/: charedit_ui.c  dialog_ui.c  follower_ui.c  follower_ui.h  gameuilib.c  gameuilib.h  intgame.c  inven_ui.c  logbook_ui.c  mainmenu_ui.c  mainmenu_ui.h  schematic_ui.c  slide_ui.c  wmap_ui.c  written_ui.c
